# ChangeLog for eclass directory
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.250 2012/05/10 09:33:59 scarabeus Exp $

  10 May 2012; Tomáš Chvátal <scarabeus@gentoo.org> office-ext.eclass:
  Ignore licenses, user accept them by portage.

  10 May 2012; Alexandre Rostovtsev <tetromino@gentoo.org> waf-utils.eclass:
  Depend on python and block python[-threads] for bug #409427.

  09 May 2012; Tomáš Chvátal <scarabeus@gentoo.org> office-ext.eclass:
  Update the default unpack to detect cases when oxt is packed elsewhere.

  09 May 2012; Matt Turner <mattst88@gentoo.org> xorg-2.eclass:
  Fix xorg-2's git:// EGIT_REPO_URI.

  09 May 2012; Tomáš Chvátal <scarabeus@gentoo.org> office-ext.eclass:
  Add the src_unpack phase for office-ext eclass.

  09 May 2012; Pacho Ramos <pacho@gentoo.org> gnome2.eclass:
  Don't call gtk-doc configure option when not available

  08 May 2012; Andreas K. Huettel <dilfridge@gentoo.org> kde4-base.eclass,
  kde4-functions.eclass, kde4-meta.eclass, kde4-meta-pkg.eclass:
  Sync kde4-*.eclass from kde overlay: add x11-libs/qt-dbus to kde
  dependencies, eqawarn on ${mycmakeargs} as string, properly treat case of
  undefined LINGUAS (bug 372457)

  08 May 2012; Andreas K. Huettel <dilfridge@gentoo.org> cmake-utils.eclass:
  Update cmake-utils.eclass from kde overlay: make builds verbose by default,
  fix usage of PREFIX (bug 358059)

  07 May 2012; Davide Pesavento <pesa@gentoo.org> qt4-build.eclass:
  Stop stripping upstream CFLAGS from g++.conf for Qt 4.8 and later (see bug
  352778 comment #6).

  06 May 2012; Fabian Groffen <grobian@gentoo.org>
  +ELT-patches/sol2-conf/2.4.2, libtool.eclass:
  Add ELT patch for Solaris x64 libtool problem where the linker is set to
  'ld_sol2'

  06 May 2012; Mike Gilbert <floppym@gentoo.org> python-distutils-ng.eclass:
  Silence eclass-to-manpage warnings.
